src/test/deca/context/invalid/modulo_float.deca
// Description:
//    println non valid
//
// Resultats:
//    Ligne 12: modulo must be used with 2 integers
//
// Historique:
//    cree le 01/01/2022


{
    int m = 2.5 % 5;
}